crates/macro-tools/tests/ui/deref/fail/unsupported_option.rs
use picea_macro_tools::Deref;

#[derive(Deref)]
struct Wrapper {
    #[deref(clone)]
    value: String,
}

fn main() {}
