crates/macro-tools/tests/ui/deref/fail/unsupported_option.stderr
error: unsupported deref option, expected `mut`
 --> tests/ui/deref/fail/unsupported_option.rs:5:13
  |
5 |     #[deref(clone)]
  |             ^^^^^
